--- a/config/database.yml
+++ b/config/database.yml
@@ -12,21 +12,20 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
-  host: localhost
+  password: password
+  host: db
 
 development:
   <<: *default
-  database: v3_apuri_development
+  database: myapp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: v3_apuri_test
+  database: myapp_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: v3_apuri_production
-  username: v3_apuri
-  password: <%= ENV["V3_APURI_DATABASE_PASSWORD"] %>
+  database: myapp_production
+  username: myapp
+  password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
