--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.5",
     "admin_teq": "git+https://github.com/runteq/AdminTEQ.git#main",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
-    "esbuild": "^0.14.50",
+    "esbuild": "^0.25.5",
     "sass": "^1.54.0"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   }
 }
